# Hell

./: CMakeLists.txt  Makefile  README.md  bouncing_circles  main  main.cpp  main.h  makefile  sfml_app  work
.cache/clangd/index/: main.cpp.4BF9503E19CA947F.idx
src/: main.cpp
